// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailInfoItem component Processing budget Snapshot budget: Item budget 1`] = `
<code
  name="ListItem"
  props={Object {}}
>
  <strong
    style={
      Object {
        "minWidth": "140px",
        "whiteSpace": "nowrap",
      }
    }
  >
    Budget
    : 
  </strong>
  63,000,000$
</code>
`;

exports[`DetailInfoItem component Processing genres Snapshot genres: Item genres 1`] = `
<code
  name="ListItem"
  props={Object {}}
>
  <strong
    style={
      Object {
        "minWidth": "140px",
        "whiteSpace": "nowrap",
      }
    }
  >
    Genres
    : 
  </strong>
   Drama
</code>
`;

exports[`DetailInfoItem component Processing overview Snapshot overview: Item overview 1`] = `
<code
  name="ListItem"
  props={Object {}}
>
  <strong
    style={
      Object {
        "minWidth": "140px",
        "whiteSpace": "nowrap",
      }
    }
  >
    Overview
    : 
  </strong>
  A ticking-time-bomb insomniac and a slippery soap salesman channel primal male aggression into a shocking new form of therapy. Their concept catches on, with underground "fight clubs" forming in every town, until an eccentric gets in the way and ignites an out-of-control spiral toward oblivion.
</code>
`;

exports[`DetailInfoItem component Processing popularity Snapshot popularity: Item popularity 1`] = `
<code
  name="ListItem"
  props={Object {}}
>
  <strong
    style={
      Object {
        "minWidth": "140px",
        "whiteSpace": "nowrap",
      }
    }
  >
    Popularity
    : 
  </strong>
  38.513
</code>
`;

exports[`DetailInfoItem component Processing production_companies Snapshot production_companies: Item production_companies 1`] = `
<code
  name="ListItem"
  props={Object {}}
>
  <strong
    style={
      Object {
        "minWidth": "140px",
        "whiteSpace": "nowrap",
      }
    }
  >
    Prod. companies
    : 
  </strong>
   Regency Enterprises, Fox 2000 Pictures, Taurus Film, Atman Entertainment, Knickerbocker Films, 20th Century Fox, The Linson Company
</code>
`;

exports[`DetailInfoItem component Processing production_countries Snapshot production_countries: Item production_countries 1`] = `
<code
  name="ListItem"
  props={Object {}}
>
  <strong
    style={
      Object {
        "minWidth": "140px",
        "whiteSpace": "nowrap",
      }
    }
  >
    Prod. countries
    : 
  </strong>
   Germany, United States of America
</code>
`;

exports[`DetailInfoItem component Processing release_date Snapshot release_date: Item release_date 1`] = `
<code
  name="ListItem"
  props={Object {}}
>
  <strong
    style={
      Object {
        "minWidth": "140px",
        "whiteSpace": "nowrap",
      }
    }
  >
    Release date
    : 
  </strong>
  15/10/1999
</code>
`;

exports[`DetailInfoItem component Processing runtime Snapshot runtime: Item runtime 1`] = `
<code
  name="ListItem"
  props={Object {}}
>
  <strong
    style={
      Object {
        "minWidth": "140px",
        "whiteSpace": "nowrap",
      }
    }
  >
    Runtime
    : 
  </strong>
  139 min.
</code>
`;

exports[`DetailInfoItem component Processing spoken_languages Snapshot spoken_languages: Item spoken_languages 1`] = `
<code
  name="ListItem"
  props={Object {}}
>
  <strong
    style={
      Object {
        "minWidth": "140px",
        "whiteSpace": "nowrap",
      }
    }
  >
    Spoken languages
    : 
  </strong>
   English
</code>
`;

exports[`DetailInfoItem component Processing status Snapshot status: Item status 1`] = `
<code
  name="ListItem"
  props={Object {}}
>
  <strong
    style={
      Object {
        "minWidth": "140px",
        "whiteSpace": "nowrap",
      }
    }
  >
    Status
    : 
  </strong>
  Released
</code>
`;

exports[`DetailInfoItem component Processing vote_average Snapshot vote_average: Item vote_average 1`] = `
<code
  name="ListItem"
  props={Object {}}
>
  <strong
    style={
      Object {
        "minWidth": "140px",
        "whiteSpace": "nowrap",
      }
    }
  >
    Vote average
    : 
  </strong>
  8.4
</code>
`;

exports[`DetailInfoItem component Processing vote_count Snapshot vote_count: Item vote_count 1`] = `
<code
  name="ListItem"
  props={Object {}}
>
  <strong
    style={
      Object {
        "minWidth": "140px",
        "whiteSpace": "nowrap",
      }
    }
  >
    Vote count
    : 
  </strong>
  13,653
</code>
`;
